--- a/packages/scss-theme/src/main.scss
+++ b/packages/scss-theme/src/main.scss
@@ -1,5 +1,6 @@
 // Main SCSS entry point (7-1 pattern)
-@import "abstracts/functions";
-@import "abstracts/mixins";
-@import "abstracts/variables";
-@import "components/information-box";
+// use "use" keyword instead of "import", its deprecated.
+@use "abstracts/functions";
+@use "abstracts/mixins";
+@use "abstracts/variables";
+@use "components/information-box";
