--- a/apps/flexbox-test/example3.css
+++ b/apps/flexbox-test/example3.css
@@ -2,7 +2,7 @@ body {
   font: 1.2em / 1.5 sans-serif;
 }
 ul {
-  max-width: 700px;
+  width: 450px;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -14,14 +14,16 @@ li {
   border-radius: 0.5em;
   color: white;
   padding: 0.5em;
+  margin: 0.5em;
 }
 
 ul {
   /* Add styles here */
   display: flex;
+  flex-wrap: wrap;
 }
 
 li {
   /* Add styles here */
-  flex: 1;
+  flex: auto;  
 }
